--- a/Website/index.html
+++ b/Website/index.html
@@ -1,3 +1,6 @@
+<!-- Github: https://github.com/00010023/wt.coursework -->
+<!-- Webhost: https://wt.genemator.me -->
+
 <!doctype html>
 <html class="no-js" lang="">
 
@@ -141,7 +144,7 @@
       </div>
 
       <footer class="footer col-12">
-        <p>&copy; Netflix</p>
+        <p>This website was created to fulfill Web Technology module's requirements and does not represent an actual company or service</p>
       </footer>
     </div>
 
