--- a/Website/404.html
+++ b/Website/404.html
@@ -1,3 +1,6 @@
+<!-- Github: https://github.com/00010023/wt.coursework -->
+<!-- Webhost: https://wt.genemator.me -->
+
 <!doctype html>
 <html lang="en">
 
