--- a/Website/index.html
+++ b/Website/index.html
@@ -1,5 +1,5 @@
 <!-- Github: https://github.com/00010023/wt.coursework -->
-<!-- Webhost: https://wt.genemator.me -->
+<!-- Webhost: https://wt.genemator.uz -->
 
 <!doctype html>
 <html class="no-js" lang="">
